--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="resume-container">
         <header>
             <div class="profile-box">
-                <img src="C:/Users/Neeli Manasa/Desktop/image-1.jpeg" alt="Profile Photo" class="profile-photo">
+                <img src="image-1.jpeg" alt="Profile Photo" class="profile-photo">
                 <h1>Neeli Manasa</h1>
                 <p>Fresher</p>
             </div>
