--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                 <li>Front-end Frameworks: <a href="https://neelimanasa.github.io/Front-end-Frameworks/" target="_blank">Live Link</a> | <a href="https://github.com/Neelimanasa/Front-end-Frameworks" target="_blank">Code</a></li>
                 <li>Chatbot: <a href="https://manasa-deva.github.io/Healthy-Advisor/" target="_blank">Live Link</a></li>
                 <li>Portfolio: <a href="https://neelimanasa.github.io/portfolio/" target="_blank">Live Link</a> | <a href="https://github.com/Neelimanasa/portfolio" target="_blank">Code</a></li>
+                <li>Resume: <a href="https://neelimanasa.github.io/manasa-resume/">Live Link</a> | <a href="https://github.com/Neelimanasa/manasa-resume" target="_blank">Code</a></li>
+              
             </ul>
+        
         </section>
 
         <!-- Certificates -->
